# solana-swap-routers

./: .gitignore  CLAUDE.md  Cargo.toml  FOR_USER.md  PLAN.md  README.md  solana-swap-architecture.html
.config/: nextest.toml
scripts/: test.sh
src/: aggregator.rs  error.rs  lib.rs  types.rs
src/dflow/: mod.rs  types.rs
src/jupiter/: mod.rs  types.rs
src/titan/: mod.rs  types.rs
tests/: main.rs  swap.rs
tests/common/: mod.rs
tests/dflow/: max_route_length.rs  mod.rs  quote_and_swap.rs  quote_and_swap_direct.rs
tests/jupiter/: mod.rs  quote_and_swap.rs  quote_and_swap_direct.rs
tests/titan/: quote_and_swap.rs  quote_and_swap_direct.rs
